DB - moved widget under app for security reasons (Chrome req)

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,19 @@
 	</head>
 	<body>
 
-		<div id="demo_chat_XYZ" class="ChatUI">
+		<div id="login_panel">
+			<div id="#email">
+				<input>
+			</div>
+			<button id="btn_call"></button>
+
+			<div id="#pin">
+				<input />
+			</div>
+			<button id="btn_auth"></button>
+		</div>
+
+		<div id="#chat" class="ChatUI">
 			<div class="transcript"></div>
 			<div class="input-container">
 				<textarea class="input" placeholder="Type something like: 'Tell me about John Smith'"></textarea>
