--- a/app/index.html
+++ b/app/index.html
@@ -3,31 +3,35 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=10"/>
 		<title>Genesys Chat - REST API</title>
-		<link type="text/css" rel="stylesheet" href="chat_widget/css/ChatUI.css"/>
 
-		<script src="js/background.js"></script>
+		<link type="text/css" rel="stylesheet" href="bower_components/ark-style/dist/css/ark-css.css"/>		
+		<script src="bower_components/jquery/jquery-1.11.1.min.js"></script>
 
-		<script src="chat_widget/js/jquery-1.11.1.min.js"></script>
-		<script src="chat_widget/js/ChatAPI_Lite.js"></script>
-		<script src="chat_widget/js/Chat_Transport_REST_httc.js"></script>
-		<script src="chat_widget/js/Chat_Transport_REST_webapi.js"></script>
-		<script src="chat_widget/js/ChatUI.js"></script>
+		<link type="text/css" rel="stylesheet" href="chat_widget/chat.css"/>
+		<script src="chat_widget/chat-api-lite.js"></script>
+		<script src="chat_widget/transport/chat_transport_rest_httc.js"></script>
+		<script src="chat_widget/transport/chat_transport_websocket.js"></script>
+		<script src="chat_widget/chat.js"></script>
+
+		<link type="text/css" rel="stylesheet" href="main/main.css"/>
 	</head>
 	<body>
 
-		<div id="login_panel">
-			<div id="#email">
-				<input>
+		<div id="login_panel" role="form">
+			<div class="form-group">
+				<label for="exampleInputEmail1">Email address</label>
+				<input type="email" class="form-control" id="exampleInputEmail">
 			</div>
-			<button id="btn_call"></button>
+			<button class="btn btn-default">Call</button>
 
-			<div id="#pin">
-				<input />
+			<div class="form-group">
+				<label for="exampleInputPin">Pin</label>
+				<input type="tel" class="form-control" id="exampleInputPin">
 			</div>
-			<button id="btn_auth"></button>
+			<button class="btn btn-default">Login</button>
 		</div>
 
-		<div id="#chat" class="ChatUI">
+		<div id="chat_panel" class="ChatUI">
 			<div class="transcript"></div>
 			<div class="input-container">
 				<textarea class="input" placeholder="Type something like: 'Tell me about John Smith'"></textarea>
@@ -35,7 +39,7 @@
 			<div class="isTyping"></div>
 		</div>
 
-		<script src="js/index.js"></script>
+		<script src="main/index.js"></script>
 
 	</body>
 </html>
