--- a/app/modules/header/header-view.html
+++ b/app/modules/header/header-view.html
@@ -1,9 +1,7 @@
 <div class="g-widget">
 	<div class="g-cover">
-		<img src="http://25.media.tumblr.com/d55a509993790027240311c9f611aaf8/tumblr_n0hpzpKEfE1st5lhmo1_1280.jpg" />
+		<!--img src="images/locations/me/us/other_locations_day.png" /-->
+		<img src="images/locations/me/us/DalyCity_Day.png" />
 	</div>
 	<img src="images/avatar.png" class="photo" />
-	<h1>{{contact.name}}</h1>
-	<h2>{{contact.title}}</h2>
- 	<h3></h3>
 </div>
