DB - card parsing

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 		<script src="modules/chat_widget/chat.js"></script>
 
 		<script src="modules/header/header-view.js"></script>
+		<script src="modules/contact/contact-card-view.js"></script>
 		<script src="modules/main/angular-main.js"></script>
 
 		<script src="services/voice-platform.js"></script>
