--- a/app/modules/main/main.html
+++ b/app/modules/main/main.html
@@ -18,7 +18,7 @@
 
 <div id="auth_screen" ng-if="contact">
 
-	<header-view contact="contact">
+	<header-view class="header" contact="contact">
 	</header-view>
 
 	<div id="chat_panel" class="ChatUI">
