DB - Added contact card widget, parsed incoming card message, module structure

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 
 		<link type="text/css" rel="stylesheet" href="modules/main/main.css"/>
 		<link type="text/css" rel="stylesheet" href="modules/header/header-view.css"/>
+		<link type="text/css" rel="stylesheet" href="modules/contact/contact-card-view.css"/>
 
 	   	<script src="bower_components/jquery/dist/jquery.js"></script>
 	    <script src="bower_components/angular/angular.js"></script>
