--- a/app/modules/main/main.html
+++ b/app/modules/main/main.html
@@ -1,32 +1,34 @@
-<div id="registration_screen" role="form" ng-if="!contact">
+<div>
+	<div id="registration_screen" role="form" ng-if="!contact">
 
-	<div class="form-group">
-		<label for="exampleInputEmail1">Email address</label>
-		<input type="email" class="form-control" id="exampleInputEmail" ng-model="email">
-		<span class="form-control-feedback"><span class="fonticon icon-alert-circle" ng-show="emailError"></span>{{emailError}}</span>
-	</div>
-	<button class="btn btn-default call-button" ng-click="onLoginClick()">Call</button>
-
-	<div class="form-group">
-		<label for="exampleInputPin">Pin</label>
-		<input type="tel" class="form-control" id="exampleInputPin" ng-model="pin">
-		<span class="form-control-feedback"><span class="fonticon icon-alert-circle" ng-show="pinError"></span>{{pinError}}</span>
-	</div>
-	<button class="btn btn-default auth-button" ng-click="onPinClick()">Login</button>
-	
-</div>
-
-<div id="auth_screen" ng-if="contact">
-
-	<header-view class="header" contact="contact">
-	</header-view>
-
-	<div id="chat_panel" class="ChatUI">
-		<div class="transcript"></div>
-		<div class="input-container">
-			<textarea class="input" placeholder="Try: 'Tell me about John Smith'"></textarea>
+		<div class="form-group">
+			<label for="exampleInputEmail1">Email address</label>
+			<input type="email" class="form-control" id="exampleInputEmail" ng-model="$parent.email">
+			<span class="form-control-feedback"><span class="fonticon icon-alert-circle" ng-show="emailError"></span>{{emailError}}</span>
 		</div>
-		<div class="isTyping"></div>
+		<button class="btn btn-default call-button" ng-click="onLoginClick()">Call</button>
+
+		<div class="form-group">
+			<label for="exampleInputPin">Pin</label>
+			<input type="tel" class="form-control" id="exampleInputPin" ng-model="$parent.pin">
+			<span class="form-control-feedback"><span class="fonticon icon-alert-circle" ng-show="pinError"></span>{{pinError}}</span>
+		</div>
+		<button class="btn btn-default auth-button" ng-click="onPinClick()">Login</button>
+		
 	</div>
 
+	<div id="auth_screen" ng-if="contact">
+
+		<header-view class="header" contact="contact">
+		</header-view>
+
+		<div id="chat_panel" class="ChatUI">
+			<div class="transcript"></div>
+			<div class="input-container">
+				<textarea class="input" placeholder="Try: 'Tell me about John Smith'"></textarea>
+			</div>
+			<div class="isTyping"></div>
+		</div>
+
+	</div>
 </div>
