--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 		<link type="text/css" rel="stylesheet" href="modules/main/main.css"/>
 		<link type="text/css" rel="stylesheet" href="modules/header/header-view.css"/>
 		<link type="text/css" rel="stylesheet" href="modules/contact/contact-card-view.css"/>
+		<link type="text/css" rel="stylesheet" href="modules/chat/chat-view.css"/>
 
 	   	<script src="bower_components/jquery/dist/jquery.js"></script>
 	    <script src="bower_components/angular/angular.js"></script>
@@ -20,16 +21,19 @@
 
 	    <script src="lib_wrappers/jquery.js"></script>
 
-		<link type="text/css" rel="stylesheet" href="modules/chat_widget/chat.css"/>
+		<!--link type="text/css" rel="stylesheet" href="modules/chat_widget/chat.css"/>
 		<script src="modules/chat_widget/chat-api-lite.js"></script>
 		<script src="modules/chat_widget/transport/chat_transport_rest_httc.js"></script>
 		<script src="modules/chat_widget/transport/chat_transport_websocket.js"></script>
-		<script src="modules/chat_widget/chat.js"></script>
+		<script src="modules/chat_widget/chat.js"></script -->
 
 		<script src="modules/header/header-view.js"></script>
 		<script src="modules/contact/contact-card-view.js"></script>
+		<script src="modules/chat/chat-view.js"></script>
+
 		<script src="modules/main/angular-main.js"></script>
 
+		<script src="services/chat-websocket-service.js"></script>
 		<script src="services/voice-platform.js"></script>
 		
 	</head>
