DB - added contact card to the chat

--- a/app/modules/contact/contact-card-view.html
+++ b/app/modules/contact/contact-card-view.html
@@ -4,7 +4,7 @@
 <div class="left_col">
 </div>
 <div class="right_col">
-	<h2 class="name">{{name}}</h2>
-	<h3 class="location">{{title}}</h3>
+	<h2 class="name">{{contact.firstName}} {{contact.lastName}}</h2>
+	<h3 class="location">{{contact.title}}</h3>
 </div>
 </div>
