DB - Added dynamic avatar loading

--- a/app/modules/contact/contact-card-view.html
+++ b/app/modules/contact/contact-card-view.html
@@ -1,10 +1,12 @@
 <div class="portfoliocard">
-<div class="coverphoto"></div>
-<div class="profile_picture"></div>
-<div class="left_col">
-</div>
-<div class="right_col">
-	<h2 class="name">{{contact.firstName}} {{contact.lastName}}</h2>
-	<h3 class="location">{{contact.title}}</h3>
-</div>
+	<div class="coverphoto" style="{{coverPhotoBg}}">
+	</div>
+	<div class="profile_picture" style="{{profilePictureBg}}">
+	</div>
+	<div class="left_col">
+	</div>
+	<div class="right_col">
+		<h2 class="name">{{contact.firstName}} {{contact.lastName}}</h2>
+		<h3 class="location">{{contact.title}}</h3>
+	</div>
 </div>
