--- a/app/modules/header/header-view.html
+++ b/app/modules/header/header-view.html
@@ -1,7 +1,6 @@
 <div class="g-widget">
 	<div class="g-cover">
-		<!--img src="images/locations/me/us/other_locations_day.png" /-->
-		<img src="images/locations/me/us/DalyCity_Day.png" />
+		<img src="images/locations/me/others/other_locations_day.png" />
 	</div>
-	<img src="images/avatar.png" class="photo" />
+	<div style="{{headerPictureBg}}" class="photo" />
 </div>
