--- a/app/modules/main/main.html
+++ b/app/modules/main/main.html
@@ -19,18 +19,10 @@
 
 	<div id="auth_screen" ng-if="contact">
 
-		<header-view class="{{header}}" contact="contact">
+		<header-view contact="contact">
 		</header-view>
 
 		<chat-view config="transportConfig"></chat-view>
-
-		<!--div id="chat_panel" class="ChatUI">
-			<div class="transcript"></div>
-			<div class="input-container">
-				<textarea class="input" placeholder="Try: 'Tell me about John Smith'"></textarea>
-			</div>
-			<div class="isTyping"></div>
-		</div -->
 
 	</div>
 </div>
