DB - Added contact card description

--- a/app/modules/contact/contact-card-view.html
+++ b/app/modules/contact/contact-card-view.html
@@ -10,8 +10,8 @@
 	</div>
 	
   <div class="event_desc">
-    <h3 class="description">{{contact.firstName}} reports to {{contact.managerName}}</h3>
-    <span style="padding-left: 30px;">{{availability_desc}}</span>
+  	<span style="padding-left: 20px;">{{pronoun}} is based in <strong>{{contact.city}}, {{contact.country}}</strong> and {{possessive}} manager is <strong>{{contact.managerName}}</strong><BR></span>
+    <span style="padding-left: 20px;">{{availability_desc}}</span>
   </div>
   
 </div>
