DB - Migrated to production network

--- a/app/modules/contact/contact-card-view.html
+++ b/app/modules/contact/contact-card-view.html
@@ -11,7 +11,7 @@
 	
   <div class="event_desc">
   	<span style="padding-left: 15px;">{{pronoun}} is based in <strong>{{contact.city}}, {{contact.country}}</strong></span><BR> 
-  	<span ng-click="querySupervisor()" style="padding-left: 15px;">{{possessive}} manager is <strong>{{contact.managerName}}</strong></span><BR>
+  	<span ng-click="querySupervisor()" class="hover" style="padding-left: 15px;">{{possessive}} manager is <strong>{{contact.managerName}}</strong></span><BR>
     <span style="padding-left: 15px;">{{availability_desc}}</span>
   </div>
   
