--- a/app/modules/contact/contact-card-view.html
+++ b/app/modules/contact/contact-card-view.html
@@ -10,9 +10,10 @@
 	</div>
 	
   <div class="event_desc">
-  	<span style="padding-left: 15px;">{{pronoun}} is based in <strong>{{contact.city}}, {{contact.country}}</strong></span><BR> 
-  	<span ng-click="querySupervisor()" class="hover" style="padding-left: 15px;">{{possessive}} manager is <strong>{{contact.managerName}}</strong></span><BR>
-    <span style="padding-left: 15px;">{{availability_desc}}</span>
+  	<span style="padding-left: 20px;">{{pronoun}} is based in <strong>{{contact.city}}, {{contact.country}}</strong></span><BR> 
+  	<span ng-click="querySupervisor()" class="hover" style="padding-left: 20px;">{{possessive}} manager is <strong>{{contact.managerName}}</strong></span><BR>
+    <span style="padding-left: 20px;">{{availability_desc}}</span><BR>
+    <span style="padding-left: 20px;">{{availability_desc_extra}}</span>
   </div>
   
 </div>
