DB - Added auto scrolling and dynamic window size

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html >
+<html>
 	
 	<head>
 
@@ -35,7 +35,7 @@
 
 	<body ng-app="genie">
 
-		<div ng-view></div>
+		<div ng-view class="full-height"></div>
 
 	</body>
 </html>
